// To compile this file, in dgraph directory :
// protoc --gofast_out=. -I. types/facets/facets.proto
syntax = "proto3";

package facets;

message Facet {
	enum ValType {
	     STRING = 0;
	     INT32 = 1;
	     FLOAT = 2;
	     BOOL = 3;
	     DATETIME = 4;
	}

	string key = 1;
	bytes value = 2;
	ValType val_type = 3;
}

message Param {
	bool all_keys = 1;
	repeated string keys = 2;
}

message Facets {
	repeated Facet facets = 1;
}

message List {
	repeated Facets facets_list = 1;
}
